Revert "Fixes existing gap on horizontal sidebar"
This reverts commit 1a3b2f989d8e209ccfd2aab3cdce91a49b317c87.

--- a/src/styles/vertical.scss
+++ b/src/styles/vertical.scss
@@ -69,7 +69,7 @@ $tabitem-bias: 30px;
 }
 
 .app .app__content {
-  padding-top: $sidebar-width;
+  padding-top: $sidebar-width + $sidebar-bias;
 }
 
 .workspaces-drawer {
